content/core/1.2.0/reference/vendr-core/stringextensions.md
---
title: StringExtensions
description: API reference for StringExtensions in Vendr, the eCommerce solution for Umbraco v8+
---
## StringExtensions

String extension methods

```csharp
public static class StringExtensions
```

**Namespace**
* [Vendr.Core](../)

### Methods

#### IsComplexJson

Tries to figure out if the input string is a serialized JSON object/array

```csharp
public static bool IsComplexJson(this string input)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| input | The input string |

**Returns**

A true if string is serialized JSON, otherwise false


---

#### IsJson

Tries to figure out if the input string is a serialized JSON value

```csharp
public static bool IsJson(this string input)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| input | The input string |

**Returns**

A true if string is serialized JSON, otherwise false


---

#### TryParse&lt;T&gt;

Tries to parse a string into a strongly typed value

```csharp
public static T? TryParse<T>(this string input)
    where T : struct
```

**Parameters**

| Parameter | Description |
| --- | --- |
| T | The output type |
| input | The input string |

**Returns**

A nullable output type


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
